remove assets folder. change express static server to serve node_modules/lightgallery/dist

--- a/lib/template.html
+++ b/lib/template.html
@@ -2,13 +2,17 @@
 <html lang="en">
     <head>
         <title>{{title}}</title>
-        <link href="css/lightgallery.min.css" rel="stylesheet">
+        <link href="lg/css/lightgallery.min.css" rel="stylesheet">
+          <style>
+            body {
+              background-color: black;
+            }
+        </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     </head>
     <body class="home">
 
       <div id="lightgallery">
-        Error.  Tell Tim about this.
       </div>
 
       <script type="text/javascript">
@@ -24,9 +28,9 @@
       </script>
 
       <script src="https://cdn.jsdelivr.net/picturefill/2.3.1/picturefill.min.js"></script>
-      <script src="js/lightgallery.min.js"></script>
-      <script src="js/lg-fullscreen.min.js"></script>
-      <script src="js/lg-thumbnail.min.js"></script>
-      <script src="js/lg-zoom.min.js"></script>
+      <script src="lg/js/lightgallery.min.js"></script>
+      <script src="lg/js/lg-fullscreen.min.js"></script>
+      <script src="lg/js/lg-thumbnail.min.js"></script>
+      <script src="lg/js/lg-zoom.min.js"></script>
     </body>
 </html>
