--- a/lib/template.html
+++ b/lib/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>{{title}}</title>
-        <link href="lg/css/lightgallery.min.css" rel="stylesheet">
+        <link href="css/lightgallery.min.css" rel="stylesheet">
           <style>
             body {
               background-color: black;
@@ -28,9 +28,9 @@
       </script>
 
       <script src="https://cdn.jsdelivr.net/picturefill/2.3.1/picturefill.min.js"></script>
-      <script src="lg/js/lightgallery.min.js"></script>
-      <script src="lg/js/lg-fullscreen.min.js"></script>
-      <script src="lg/js/lg-thumbnail.min.js"></script>
-      <script src="lg/js/lg-zoom.min.js"></script>
+      <script src="js/lightgallery.min.js"></script>
+      <script src="js/lg-fullscreen.min.js"></script>
+      <script src="js/lg-thumbnail.min.js"></script>
+      <script src="js/lg-zoom.min.js"></script>
     </body>
 </html>
